--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,68 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learning is Earning | AI for Teens</title>
+    <script src="https://cdnjs.cloudflare.com"></script>
+    <script src="https://unpkg.com"></script>
+    <style>
+        :root { --bg: #f8fafc; --card: #ffffff; --text: #1e293b; --primary: #00d084; }
+        [data-theme="dark"] { --bg: #0f172a; --card: #1e293b; --text: #f8fafc; }
+        body { background: var(--bg); color: var(--text); font-family: sans-serif; text-align: center; transition: 0.3s; padding: 20px; }
+        .app-card { background: var(--card); max-width: 600px; margin: auto; padding: 30px; border-radius: 24px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+        #video-holder canvas { border-radius: 18px; width: 100% !important; height: auto !important; border: 4px solid var(--primary); }
+        .cta-button { background: var(--primary); color: white; border: none; border-radius: 50px; padding: 14px 28px; font-weight: bold; cursor: pointer; margin: 5px; }
+    </style>
+</head>
+<body>
+    <button id="theme-toggle" onclick="toggleTheme()" style="position:fixed; top:20px; right:20px; padding:10px; border-radius:50%; border:none; cursor:pointer;">🌙</button>
+    <div class="app-card">
+        <h1>Learning is Earning 🌿</h1>
+        <p>Show an object to the camera!</p>
+        <div id="video-holder"></div>
+        <div id="status" style="margin: 10px;">⌛ Loading AI...</div>
+        <div id="label" style="font-size: 1.5rem; font-weight: bold; color: var(--primary);">Waiting...</div>
+        <br>
+        <button class="cta-button" onclick="saveReport()">💾 Save Report</button>
+        <hr style="margin: 30px 0; opacity: 0.2;">
+        <h3>Join the Program</h3>
+        <form action="https://formspree.io" method="POST">
+            <input type="text" name="name" placeholder="Your Name" required style="width:80%; padding:10px; margin-bottom:10px;"><br>
+            <button type="submit" class="cta-button" style="background:#007bff;">Register Now</button>
+        </form>
+    </div>
 
-on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    <script>
+        let classifier; let video;
+        function setup() {
+            let canvas = createCanvas(320, 240);
+            canvas.parent('video-holder');
+            video = createCapture(VIDEO);
+            video.hide();
+            classifier = ml5.imageClassifier('MobileNet', () => {
+                document.getElementById('status').innerText = "AI Active ✅";
+                classifyVideo();
+            });
+        }
+        function classifyVideo() { classifier.classify(video, (err, res) => {
+            document.getElementById('label').innerText = res[0].label;
+            classifyVideo();
+        }); }
+        function draw() { image(video, 0, 0, width, height); }
+        function toggleTheme() {
+            const theme = document.documentElement.getAttribute("data-theme") === "dark" ? "light" : "dark";
+            document.documentElement.setAttribute("data-theme", theme);
+            document.getElementById("theme-toggle").innerText = theme === "dark" ? "☀️" : "🌙";
+        }
+        function saveReport() {
+            const text = `Learning is Earning Report\nResult: ${document.getElementById('label').innerText}`;
+            const blob = new Blob([text], { type: 'text/plain' });
+            const anchor = document.createElement('a');
+            anchor.href = URL.createObjectURL(blob);
+            anchor.download = 'AI_Report.txt';
+            anchor.click();
+        }
+    </script>
+</body>
+</html>
